<resources>
    <string name="app_name">CS4084</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="click_to_login">Click to Login</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="click_to_register">Click to Register</string>
    <string name="logout">Logout</string>
    <string name="first_name">First Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="surname">Surname</string>
    <string name="interests">Interests</string>
    <string name="gender">Gender</string>
    <string name="bio">Bio</string>
    <string name="age">Age</string>
    <string name="phone_number">Phone Number</string>
    <string name="create_account">Create Account</string>
    <string name="create_your_account">Create Your Account</string>
    <string name="open_camera">Open Camera</string>
    <string name="picture_taken">Picture Taken</string>
    <string name= "map_key">AIzaSyDX6ws8cC65ooJHeQ4VzvSOdkZ0RrLprvQ</string>
</resources>